--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
           POSTGRES_DB: test_db
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: admin
-          POSTGRES_HOST: localhost
+          POSTGRES_HOST: database
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -48,11 +48,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: 'pip' # caching pip dependencies
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -64,3 +59,8 @@ jobs:
           AT_API_KEY: ${{ secrets.AT_API_KEY }}
         run: |
           python -m pytest --cov -v
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
