--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,19 +48,26 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: 'pip' # caching pip dependencies
 
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Run the tests and collect coverage
+      - name: Build Docker image
+        run: docker-compose up --build -d
+
+      - name: Check running containers
+        run: docker ps -a
+
+      - name: Run tests with coverage inside the container
         env:
           AT_USERNAME: "sandbox"
           AT_API_KEY: ${{ secrets.AT_API_KEY }}
-        run: |
-          python -m pytest --cov -v
+        run: docker-compose exec api pytest --cov --verbose
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Shutdown Docker Compose
+        if: always() # whether the tests pass or fail
+        run: docker-compose down
