--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,22 +17,6 @@ jobs:
   pytest:
     runs-on: ubuntu-22.04
 
-    services:
-      postgres:
-        image: postgres:latest
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_DB: test_db
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: admin
-          POSTGRES_HOST: database
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     strategy:
       # Keep running even if one variation of the job fails
       fail-fast: false
@@ -52,11 +36,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        env:
-          PG_USER: ${{ secrets.PG_USER }}
-          PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
-          PG_DB: ${{ secrets.PG_DB }}
-        run: docker-compose up --build -d
+        run: docker-compose -f "compose.ci.yaml" up --build
 
       - name: Check running containers
         run: docker ps -a
