update africastalking env vars in compose file

--- a/compose.ci.yaml
+++ b/compose.ci.yaml
@@ -7,7 +7,9 @@ services:
     ports: 
       - 8000:8000
     environment:
-      - SQLALCHEMY_DATABASE_URI=postgresql://postgres:admin@database:5432/test_db  
+      - SQLALCHEMY_DATABASE_URI=postgresql://postgres:admin@database:5432/test_db
+      - AT_USERNAME=sandbox
+      - AT_API_KEY=${AT_API_KEY} 
     depends_on:
         - database
 
