--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,10 +45,10 @@ jobs:
         run: docker ps -a
 
       - name: Run tests with coverage inside the container
-        run: docker-compose exec -T api pytest --cov --verbose
+        run: docker-compose exec -T api pytest --cov=customer_orders_service  --verbose
 
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
