--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,8 @@
 name: Deploy to Heroku
 
 on:
-push:
-  branches:
-    - main
+  push:
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
@@ -19,9 +18,9 @@ jobs:
         run: |
           echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
 
-      - name: Build, tag and push Docker image to Heroku
+      - name: Build Docker image
         env:
-          AT_USERNAME: sandbox
+          AT_USERNAME: "sandbox"
           AT_API_KEY: ${{ secrets.AT_API_KEY }}
           PG_USER: ${{ secrets.PG_USER }}
           PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
@@ -29,8 +28,6 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           OAUTH_CLIENT_ID: ${{ secrets.OAUTH_CLIENT_ID }}
           OAUTH_CLIENT_SECRET: ${{ secrets.OAUTH_CLIENT_SECRET }}
-
-      - name: Build Docker image
         run: |
           docker-compose -f "compose.yaml" build
 
