--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,9 +33,10 @@ jobs:
         run: |
           docker-compose -f "compose.yaml" build
 
-      - name: Tag Docker image
+      - name: Tag and push Docker image
         run: |
           docker tag customer-orders-service_api registry.heroku.com/customer-orders-service/web
+          docker push registry.heroku.com/customer-orders-service/web
 
       - name: Deploy to Heroku
         env:
