--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,6 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "customer-orders-service"
+          heroku_app_name: "customer-orders-service-app"
           heroku_email: "kahwaisheila@gmail.com"
           usedocker: true
