--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,7 +47,10 @@ jobs:
         run: docker ps -a
 
       - name: Run tests with coverage inside the container
-        run: docker-compose exec -T api pytest --cov=customer_orders_service  --verbose
+        run: docker-compose exec -T api pytest --cov=customer_orders_service  --cov-report=xml --cov-report=html --verbose
+
+      - name: Copy coverage report to host
+        run: docker cp $(docker-compose ps -q api):/customer-orders-service/htmlcov ./
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
